feat(file): edited section

--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
                         <section id="grid-durability" class="block">
                             <h2 class="grid-heading">Durability</h2>
                             <p class="description">Sustained employment, income, and well-being <br> outcomes over time.<br><strong>Our alumni 2-5 years after graduation:</strong></p>
-                            <section id ="after-grad" class="statistic-after-graduation">
-                                <section class="statistic-container">
+                            <div id ="after-grad" class="statistic-after-graduation">
+                                <div class="statistic-container">
                                     <p class="statistic">76%</p>
                                     <p class="statistic__caption">continue to be <br> employed</p>
-                                </section>
-                                <section class="statistic-container">
+                                </div>
+                                <div class="statistic-container">
                                     <p class="statistic">58%</p>
                                     <p class="statistic__caption">earn a living wage <br> (20% above <br> minimum wage)</p>
-                                </section>
-                                <section class="statistic-container">
+                                </div>
+                                <div class="statistic-container">
                                     <p class="statistic">36%</p>
                                     <p class="statistic__caption">are able to save <br> money</p>
-                                </section>
-                            </section>
+                                </div>
+                            </div>
                         </section>
                     </section>
             </section>
