feat(file): remove empty id

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-        <section id="" class="band-background">
+        <section class="band-background">
             <section class="container">
                     <h1>BREADTH, DEPTH & DURABILITY</h1>
                     <h2>Our impact comes from advancing three <br> areas simultaneously</h2>
