feat(file): renamed title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			rel="stylesheet"
 			href="./style.css"
 		/>
-		<title>Depth</title>
+		<title>Breadth, Depth & Durability</title>
 	</head>
 
 	<body>
